--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         padding: 0;
       }
       header {
-        background-color: #333;
+        background-color: #f00c0c;
         color: #fff;
         padding: 20px;
         text-align: center;
@@ -68,11 +68,20 @@
         text-align: center;
         font-size: 16px;
       }
+      .logo {
+  width: 600px;
+  height: 600px;
+}
+     
     </style>
   </head>
   <body>
     <header>
       <h1>Ryskon - The Mielons Company</h1>
+      <header>
+        <img src="logo.png" class= "logo" alt="Logo naszej firmy" >
+        <h1>Nasza firma - Woreczki plastikowe</h1>
+      </header>
     </header>
     <section id="produkty">
       <h2>Nasze produkty</h2>
@@ -92,7 +101,7 @@
           <h3>Woreczki z nadrukiem</h3>
           <p>Woreczki z nadrukiem są idealne do promocji firmy. Nadrukujemy na nich logo i informacje o firmie. Dostępne są w różnych rozmiarach.</p>
         </li>
-        <li>
+        <!-- <li>
           <img src="https://via.placeholder.com/150" alt="Woreczki antystatyczne">
           <h3>Woreczki antystatyczne</h3>
           <p>Woreczki antystatyczne są niezbędne do przechowywania elementów elektronicznych. Zapobiegają one uszkodzeniom elementów spowodowanym przez ładunki elektrostatyczne.</p>
@@ -103,7 +112,7 @@
           <p>Woreczki foliowe są bardzo trwałe i wytrzymałe. Są idealne do przechowywania produktów, które wymagają szczelnej ochrony. Dostępne są w różnych grubościach i rozmiarach.</p>
         </li>
       </ul>
-      <a href="#kontakt">Skontaktuj się z nami</a>
+      <a href="#kontakt">Skontaktuj się z nami</a> -->
     </section>
     <section id="kontakt">
       <h2>Kontakt</h2>
@@ -117,4 +126,3 @@
     </footer>
   </body>
 </html>
-```
