--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <h1>Ryskon - The Mielons Company</h1>
       <header>
         <img src="logo.png" class= "logo" alt="Logo naszej firmy" >
-        <h1>Nasza firma - Woreczki plastikowe</h1>
+        <h1>Nasza firma - łuły i fłuzyły, fłuzyły ołaz łuły</h1>
       </header>
     </header>
     <section id="produkty">
