--- a/index.html
+++ b/index.html
@@ -117,9 +117,10 @@
     <section id="kontakt">
       <h2>Kontakt</h2>
       <p>Zapraszamy do kontaktu w celu uzyskania szczegółowych informacji na temat naszych produktów oraz w celu złożenia zamówienia.</p>
-      <p>Adres: ul. Mielonowa 69, 00-000 Mielonki Dolne</p>
-      <p>Telefon: 123-456-789</p>
+      <p>Adres: ul. Mazurska 24, 82-300 Elbląg, Poland</p>
+      <p>Telefon: +48 55 236 13 07</p>
       <p>E-mail: info@nasza-firma.pl</p>
+      <p>Godziny otwarcia: od poniedziałku do piątku od 8:00 do 15:00</p>
     </section>
     <footer>
       &copy; 2023 Ryskon - The Mielons Company - łuły i fłuzyły
