--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
     <section id="kontakt">
       <h2>Kontakt</h2>
       <p>Zapraszamy do kontaktu w celu uzyskania szczegółowych informacji na temat naszych produktów oraz w celu złożenia zamówienia.</p>
-      <p>Adres: ul. Mazurska 24, 82-300 Elbląg, Poland</p>
-      <p>Telefon: +48 55 236 13 07</p>
-      <p>E-mail: info@nasza-firma.pl</p>
-      <p>Godziny otwarcia: od poniedziałku do piątku od 8:00 do 15:00</p>
+      <p> <b> Adres: </b>ul. Mazurska 24, 82-300 Elbląg, Poland</p>
+      <p> <b>Telefon:</b> +48 55 236 13 07</p>
+      <p> <b> E-mail: </b>info@nasza-firma.pl</p>
+      <p><b> Godziny otwarcia: </b> od poniedziałku do piątku <b>  8:00 - 15:00 <b> </p>
     </section>
     <footer>
       &copy; 2023 Ryskon - The Mielons Company - łuły i fłuzyły
